--- a/views/partials/footer/footer-block.handlebars
+++ b/views/partials/footer/footer-block.handlebars
@@ -18,8 +18,7 @@
       <div class="copyright float-right font-roboto text-uppercase"><small class="font-white">
         &copy;
         <script>
-          document.write(new Date().getFullYear())
-        </script>, Pawstagram.</small>
+          document.write(new Date().getFullYear())</script>, Pawstagram.</small>
       </div>
     </div>
   </footer>
